<resources>
    <string name="app_name">ProfessionalNoteBook</string>
    <string name="note_book">NOTE BOOK</string>
    <string name="fatemeh_mohammadi">Fatemeh Mohammadi</string>
    <string name="mohadese_dashti">Mohadese Dashti</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="professionalnotebook">ProfessionalNoteBook</string>
    <string name="login_with">Login With</string>
    <string name="email">Email</string>
    <string name="sort_by">Sort by</string>
    <string name="time">13:40  99/8/29</string>
    <string name="this_is_title_note">this is title note</string>
    <string name="descriptionNote">this is description for note.this is description for note.this is description for note.this is description for note.this is description for note.this is description for note.this is description for note.</string>
    <string name="select_category">Select Category</string>
    <string name="note">Note</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="save">save</string>
    <string name="description_for_image_view">Description For ImageView</string>
    <string name="titleSave">Professional NoteBook</string>
    <string name="titleCategory">Professional NoteBook</string>
    <string name="titleDelete">Delete NoteBook</string>
    <string name="messageDelete">Do you want to delete this note?</string>
    <string name="messageSave">Do you want to save change to note?</string>
    <string name="yesSave">Save</string>
    <string name="yesDelete">Yes</string>
    <string name="noSave">Don\'t save</string>
    <string name="noDelete">No</string>
    <string name="lastmodify">LastModify :</string>
    <string name="last_modify">Last Modify</string>
    <string name="logout">LogOut</string>
    <string name="biography">BioGraphy</string>
    <string name="home">HOME</string>
    <string name="setting">SETTING</string>
    <string name="category">CATEGORY</string>
    <string name="account">ACCOUNT</string>
    <string name="empty">This Category is Empty Please Crete a note</string>
    <string name="crete">Create Note</string>
    <string name="night_mode">Night Mode</string>
    <string name="other">Other</string>
    <string name="emptyMessageField">please enter all field</string>
    <string name="ok">OK</string>
    <string name="pleaseWait">Please Wait ....</string>
    <string name="noteSaveSuccessful">Note Save Successful</string>
    <string name="updateNoteSuccessful">Update Note Successful</string>
    <string name="noImageSelected">No Image Selected!</string>
    <string name="chooseImage">Choose Image</string>
    <string name="enterName">Enter Name</string>
    <string name="enterBio">Enter Biography</string>
    <string name="emptyMessage">please enter field</string>
    <string name="updateUserSuccessful">Update User Successful</string>

    <!-- Category -->
    <string name="Programming">Programming</string>
    <string name="Cleaning">Cleaning</string>
    <string name="Lesson">Lesson</string>
    <string name="Movie">Movie</string>
    <string name="Music">Music</string>
    <string name="Buy">Buy</string>
    <string name="Other">Other</string>

    <!-- Sort -->
    <string name="Category">Category</string>
    <string name="Title">Title</string>
    <string name="Time">Time</string>
    <string name="Newest">Newest</string>
    <string name="Oldest">Oldest</string>

    <!-- Login -->
    <string name="enterInfo">please enter information</string>
    <string name="loginSuccessful">Login is Successful</string>
    <string name="invalidEmail">The entered email is invalid</string>
    <string name="incorrectInfo">The information entered is incorrect</string>
    <string name="existEmailLogin">You have not signup before, please signup</string>
    <string name="tryAgain">There is a Problem please try Again</string>

    <!-- SignUp -->
    <string name="notEqualPass">A password is not equal to confirm password</string>
    <string name="signUpSuccessful">SignUp is Successful</string>
    <string name="existEmailSignUp">You are already signUp , Please login</string>
    <string name="strongPassword">Please choose a strong password</string>

    <!-- Preference Titles -->
    <string name="themeHeader">Theme</string>
    <string name="languageHeader">Language</string>
    <string name="feedbackHeader">Feedback</string>

    <!-- Theme Preferences -->
    <string name="theme_title">Set Theme</string>
    <string name="Light_mode">Light Mode</string>
    <string name="summaryOff">Dark mode</string>
    <string name="summaryOn">Light mode</string>

    <!-- Feedback Preferences -->
    <string name="summaryFeedback">Please send us your feedback</string>
    <string name="titleFeedback">Send feedback</string>
    <string name="sendFeedback">Your feedback was received, thank you</string>

    <!-- Language Preferences -->
    <string name="titleLanguage">Set Language</string>
</resources>