<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.UserAccountFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAccount"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivChangePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/ivAccount"
        app:layout_constraintEnd_toEndOf="@+id/ivAccount"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ivAccount"
        app:layout_constraintTop_toTopOf="@+id/ivAccount"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAccount">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="10dp" />

        <TextView
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/biography"
            android:inputType="textPersonName"
            android:maxLines="5"
            android:padding="10dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_btn"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/baloo"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/logout"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    <com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout
        android:id="@+id/clView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogout"
        app:layout_constraintVertical_bias="1.0">

    </com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>



</androidx.constraintlayout.widget.ConstraintLayout>