<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/color1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_toStartOf="@id/tvEdit"
                android:id="@+id/tvTime"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:padding="16dp"
                android:text="@string/time"
                tools:ignore="RelativeOverlap"
                android:layout_toLeftOf="@id/tvEdit" />


            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/ic_delete"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/tvEdit"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="20dp"
                android:layout_toStartOf="@id/tvDelete"
                android:layout_toLeftOf="@id/tvDelete"
                android:background="@drawable/ic_edit" />

        </RelativeLayout>


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:text="@string/this_is_title_note"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:maxLines="3"
            android:padding="16dp"
            android:text="@string/descriptionNote" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>