<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BackgroundDay"
    tools:context=".activity.UpdateShowDeleteNoteActivity">

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_delete"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_edit"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="@+id/tvDelete"
        app:layout_constraintEnd_toStartOf="@+id/tvDelete"
        app:layout_constraintTop_toTopOf="@+id/tvDelete"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_check"
        android:fontFamily="@font/poppins_medium"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tvDelete"
        app:layout_constraintEnd_toStartOf="@+id/tvDelete"
        app:layout_constraintTop_toTopOf="@+id/tvDelete"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/ic_back"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="@+id/tvEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvEdit"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/etCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/select_category"
        android:padding="10dp"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEdit"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategory"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        tools:ignore="LabelFor,MissingConstraints" />


    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/select_category"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEdit"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="LabelFor,MissingConstraints" />


    <RelativeLayout
        android:id="@+id/rvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/clView"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tvLastModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toStartOf="@id/tvTime"
            android:layout_toLeftOf="@id/tvTime"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/last_modify"
            android:visibility="invisible" />


    </RelativeLayout>

    <com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout
        android:id="@+id/clView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>